--- a/src/components/style.css
+++ b/src/components/style.css
@@ -48,11 +48,6 @@ header {
     z-index: -1; /* Move the pseudo-element behind the content */
 }
 
-.header-documentation{
-    background-color: #D4C9BE; /* Unique background color for Documentation header */
-    padding: 10px;
-}
-
 .header-illustration{
     background-color: #D4C9BE; /* Unique background color for Documentation header */
     padding: 10px;
@@ -98,6 +93,22 @@ header {
     bottom: 0;
     opacity: 0.5; /* Adjust the opacity as needed (0.0 to 1.0) */
     z-index: -1; /* Move the pseudo-element behind the content */
+}
+
+#subcategory {
+    text-align: center;
+    padding: 0 200px 10px; /* Adjust top, right, bottom, left padding as needed */
+}
+
+.subcategory-title {
+    font-size: 30px;
+    display: inline;
+}
+
+.subcategory-description {
+    font-size: 18px; /* Adjust font size as needed */
+    line-height: 1.5; /* Adjust line height as needed */
+    display: inline;
 }
 
 #coding-projects {
@@ -249,10 +260,12 @@ nav ul li a.active {
     flex-direction: column;
     align-items: center;
 }
+
 .content {
     flex: 1;
     padding: 20px;
     text-align: center;
+    max-width: 100%; /* Adjust the width of the content */
 }
 
 .image-container {
@@ -515,10 +528,6 @@ nav ul li a.active {
     max-width: 80%;
     height: auto;
     cursor: pointer;
-}
-
-.content {
-    max-width: 100%; /* Adjust the width of the content */
 }
 
 .rounded-image {
