--- a/src/components/index.html
+++ b/src/components/index.html
@@ -11,10 +11,11 @@
 
 <body>
     <header>
-        <a href="../pages/home.html" class="logo-container">
+        <a href="../pages/home.html" class="logo-container" style="text-decoration: none; color: #534741;">
             <img class="logo" src="../img/SVG/logo.svg" alt="Initials Logo">
-            <h2>Allison Lu</h2>
+            <h2 style="color: inherit;">Allison Lu</h2>
         </a>
+
         <nav>
             <ul>
                 <li class="dropdown">
