--- a/src/components/style.css
+++ b/src/components/style.css
@@ -208,7 +208,7 @@ nav ul li a {
 }
 
 nav ul li a.active {
-    color: #B3724D; /* Adjust the color for the active link */
+    color: #777C8F; /*#535868; #B3724D; /* Adjust the color for the active link */
 }
 
 /*dropdown*/
@@ -220,7 +220,7 @@ nav ul li a.active {
 .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #cabca3; /* Earth tone color */
+    background-color: #C1CBE0; /*#cabca3; /* Earth tone color */
     min-width: 160px;
     z-index: 1; /* Ensure the dropdown is above other elements */
 }
@@ -249,6 +249,7 @@ nav ul li a.active {
     padding: 15px 20px;
     margin-top: 20px;
     margin-bottom: 20px;
+    overflow: hidden; /* Add this line to hide the scrollbar */
     /*background-color: #D4C9BE; /* Add a background color to sections for better visibility */
 }
 
@@ -269,11 +270,18 @@ nav ul li a.active {
     max-width: 100%; /* Adjust the width of the content */
 }
 
+.journey-content {
+    flex: 1;
+    margin-bottom: 10px;
+    text-align: center;
+    max-width: 100%; /* Adjust the width of the content */
+}
 .image-container {
     flex: 1;
     overflow: hidden;
-    max-width: 100%;/* Adjust the width of the image container */
-    margin-bottom: 10px;
+    max-width: 90%;/* Adjust the width of the image container */
+    margin-bottom: 5px;
+    margin-top: 5px;
 }
 
 .video-group {
@@ -392,14 +400,12 @@ nav ul li a.active {
 .slider {
     position: relative;
     width: 100%;
-    overflow: hidden;
-}
+    overflow: hidden;}
 
 .slide {
     width: 100%;
     flex: 0 0 auto;
-    display: none;
-}
+    display: none;}
 
 .slide img {
     width: 100%;
@@ -411,20 +417,24 @@ nav ul li a.active {
     /* Your slider styles go here */
     width: 100%;
     height: auto;
+    justify-content: center; /* Center content horizontally */
+    align-items: center; /* Center content vertically */
 }
 
 /* Styles for Slider 2 */
 #slider2 {
     /* Your slider styles go here */
     width: 100%;
-    height: auto;
-}
+    height: auto;}
 
 /* Styles for Slider 3 */
-#slider3 {
+#slide3a, #slide3b,#slide3c,#slide3d,#slide3e {
     /* Your slider styles go here */
-    width: 80%;
+    width: 100%;
+    max-width: 50%;
     height: auto;
+    align-items: center; /* Center content horizontally */
+    justify-content: center; /* Center content vertically */
 }
 
 .slider button {
@@ -483,21 +493,21 @@ nav ul li a.active {
 .work-experience {
     display: flex;
     justify-content: space-between;
-    padding: 15px 20px;
+    padding: 15px 45px;
 }
 
 /*Technical Skills section*/
 .technical-skills{
     display: flex;
     justify-content: space-between;
-    padding: 15px 20px;
+    padding: 15px 45px;
 }
 
 /*Certification section*/
 .certification{
     display: flex;
     justify-content: space-between;
-    padding: 15px 20px;
+    padding: 15px 45px;
 }
 
 /* Side title */
